--- a/build.gradle
+++ b/build.gradle
@@ -72,3 +72,43 @@ dependencyManagement {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+def jacocoExclude = [
+        "src/**/model/**/*",
+        "src/**/application/**/*",
+        "src/**/infrastructure/**/*",
+]
+
+test {
+    finalizedBy jacocoTestReport
+}
+
+jacoco {
+    toolVersion = "0.8.12"
+}
+
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
+        html.required = true
+    }
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: jacocoExclude)
+        }))
+    }
+    finalizedBy jacocoTestCoverageVerification
+}
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            excludes = jacocoExclude
+            limit {
+                minimum = 0.1
+            }
+        }
+    }
+}
