--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -9,7 +9,7 @@ spring: # Spring Configuration
 
     jpa:
         hibernate:
-            ddl-auto: update
+            ddl-auto: create
             naming:
                 physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
         properties:
@@ -24,7 +24,8 @@ logging:
         web: trace
         org:
             springframework:
-                web: trace
+                security: debug
+                web: debug
 
 server:
     servlet:
