--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -25,7 +25,7 @@ logging:
         org:
             springframework:
                 security: debug
-                web: debug
+                web: trace
 
 server:
     servlet:
