--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -37,6 +37,8 @@ mall:
         base-url: localhost:8099/mall/v1
     notification:
         base-url: localhost:8097/mall/v1
+    traceability:
+        base-url: localhost:8096/mall/v1
 
 
 allowed-origins:
